--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,2 @@
+MONGO_URI=mongodb://127.0.0.1:27017/eventDB
 PORT=5000
-MONGO_URI=mongodb://127.0.0.1:27017/campus_events
-JWT_SECRET=supersecretkey
